--- a/sphinx_rtd_theme/layout.html
+++ b/sphinx_rtd_theme/layout.html
@@ -154,10 +154,7 @@
           SphinxRtdTheme.StickyNav.enable();
       });
   </script>
-  {% endif %}
-
-  {%- block footer %} 
-  <script>
+  <script type="text/javascript">
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -167,7 +164,9 @@
   ga('send', 'pageview');
 
   </script>
-  {% endblock %}
+  {% endif %}
+
+  {%- block footer %} {% endblock %}
 
 </body>
 </html>
