--- a/sphinx_rtd_theme/layout.html
+++ b/sphinx_rtd_theme/layout.html
@@ -161,6 +161,7 @@
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-54579813-1', 'auto');
+  ga('required', 'displayfeatures');
   ga('send', 'pageview');
 
   </script>
